--- a/Scripts/Style.css
+++ b/Scripts/Style.css
@@ -4,6 +4,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-image: none;
+}
+
+.form h1 {
+    text-align: center;
+    color: white;
 }
 
 label {
@@ -12,4 +18,22 @@ label {
 
 body{
     background-size: 100%
+}
+
+.navbar {
+    display: inline-flex;
+    list-style-type: none;
+}
+
+.btn {
+    margin: 20px;
+}
+
+.party {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
 }
